fix: wrap categories

--- a/styles/main.css
+++ b/styles/main.css
@@ -64,6 +64,7 @@ ul {
   text-decoration: none;
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
   width: 100%;
   margin-bottom: 2.5rem;
 }
